Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28742

UBSan: Undefined value for task_type_t in TaskLogEntry

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • 5.5.0
    • couchbase-bucket
    • Untriaged
    • Unknown

    Description

      As reported by UBSan:

          /Users/dave/repos/couchbase/server/source/kv_engine/engines/ep/src/tasklogentry.h:52:24: runtime error: load of value 163270144, which is not a valid value for type 'task_type_t'
          #0 0x10078c72e in TaskLogEntry::TaskLogEntry(TaskLogEntry const&) tasklogentry.h:52
      

      This is due to not initializing all member variables in the TaskLogEntry constructor.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty