MB-28742: UBSan: Fix undefined value for task_type_t

As reported by UBSan:

    runtime error: load of value 163270144, which is not a valid value for type 'task_type_t'
    #0 0x10078c72e in TaskLogEntry::TaskLogEntry(TaskLogEntry const&) tasklogentry.h:52

This is due to not initializing all member variables in the
TaskLogEntry constructor.

Change-Id: I3b4e65bbeaa174641130bbf3d87a77b7d3fc97d9
Reviewed-on: http://review.couchbase.org/91019
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>